RESOLVED FIXED93474
[GStreamer] 0.11 build broken (again)
https://bugs.webkit.org/show_bug.cgi?id=93474
Summary [GStreamer] 0.11 build broken (again)
Philippe Normand
Reported 2012-08-08 06:56:44 PDT
Patch incoming
Attachments
Patch (7.57 KB, patch)
2012-08-08 07:07 PDT, Philippe Normand
webkit-ews: commit-queue-
Patch (7.75 KB, patch)
2012-08-08 09:11 PDT, Philippe Normand
mrobinson: review+
mrobinson: commit-queue-
Philippe Normand
Comment 1 2012-08-08 07:07:45 PDT
Philippe Normand
Comment 2 2012-08-08 07:16:42 PDT
Comment on attachment 157210 [details] Patch Err, wrong patch.
Early Warning System Bot
Comment 3 2012-08-08 08:15:23 PDT
Gyuyoung Kim
Comment 4 2012-08-08 08:21:44 PDT
Early Warning System Bot
Comment 5 2012-08-08 08:27:55 PDT
Philippe Normand
Comment 6 2012-08-08 09:11:13 PDT
Martin Robinson
Comment 7 2012-08-08 09:21:28 PDT
Comment on attachment 157233 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=157233&action=review > configure.ac:473 > +# fastream-0.1 depends on gstreamer 0.10 currently. Disable Small typo here: fastream -> farstream
Philippe Normand
Comment 8 2012-08-08 09:53:09 PDT
Thiago Marcos P. Santos
Comment 9 2012-08-08 10:03:08 PDT
This patch broke EFL build. Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp.o /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp: In member function ‘virtual void StreamingClient::didReceiveResponse(WebCore::ResourceHandle*, const WebCore::ResourceResponse&)’: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:856:159: error: cannot convert ‘GstTagList* {aka _GstStructure*}’ to ‘GstPad* {aka _GstPad*}’ for argument ‘2’ to ‘void notifyGstTagsOnPad(GstElement*, GstPad*, GstTagList*)’ make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs....
Philippe Normand
Comment 10 2012-08-08 10:08:15 PDT
Oops, thanks Thiago. Build fix in r125043!
Philippe Normand
Comment 11 2012-09-13 08:44:51 PDT
*** Bug 94955 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.