[GStreamer] 0.11 build broken (again) https://bugs.webkit.org/show_bug.cgi?id=93474

Reviewed by Martin Robinson.

.:

* configure.ac: Disable media-stream build if GStreamer 0.11
support is enabled, due to farstream-0.1 still messing up with
gstreamer-0.10 include path.

Source/WebCore:

Adapt the GStreamer media player backend to the latest GStreamer
0.11 API changes.

* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef):
* platform/graphics/gstreamer/GStreamerVersioning.cpp:
(gstObjectIsFloating):
* platform/graphics/gstreamer/GStreamerVersioning.h:
* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(StreamingClient::didReceiveResponse):

Canonical link: https://commits.webkit.org/111349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125041 268f45cc-cd09-0410-ab3c-d52691b4dbfc