Source/WebCore/platform/graphics/gstreamer/GStreamerVersioning.h
@@ -32,4 +32,6 @@ GstCaps* webkitGstGetPadCaps(GstPad*);
 bool getVideoSizeAndFormatFromCaps(GstCaps*, WebCore::IntSize&, GstVideoFormat&, int& pixelAspectRatioNumerator, int& pixelAspectRatioDenominator, int& stride);
 GstBuffer* createGstBuffer(GstBuffer*);
 void setGstElementClassMetadata(GstElementClass*, const char* name, const char* longName, const char* description, const char* author);
+bool gstObjectIsFloating(GstObject*);
+void notifyGstTagsOnPad(GstElement*, GstPad*, GstTagList*);
 #endif // GStreamerVersioning_h
